--- a/movies.html
+++ b/movies.html
@@ -104,8 +104,9 @@
       <button type="submit" class="btn btn-primary">Get tickets</button>
     </form>
 
-    <div class="show-result">
+    <div id="show-result">
       <h2>Total</h2>
+      <p><span class="result"></span></p>
     </div>
   </div><!--end of container -->
   <!-- Javascript -->
